tests/acs_security_frontend_demos/connlist_output.txt
{ingress-controller} => frontend/asset-cache[Deployment] : No Connections
{ingress-controller} => frontend/webapp[Deployment] : No Connections
