tests/acs_security_frontend_demos/webapp_configmap.yaml
apiVersion: v1
data:
  CHECKOUT_ADDR: checkout-service.backend
  CHECKOUT_PORT: "8080"
  REPORT_GENERATOR_SERVICE_ADDR: reports-service.backend
  REPORT_GENERATOR_SERVICE_PORT: "8080"
  RECOMMENDATION_ADDR: recommendation-service.backend
  RECOMMENDATION_PORT: "8080"
  SHIPPING_ADDR: shipping-service.backend
  SHIPPING_PORT: "8080"
kind: ConfigMap
metadata:
  name: webapp-endpoint-config
  namespace: frontend
