tests/acs_security_frontend_demos/webapp_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp 
  namespace: frontend 
  labels:
    app: webapp
spec:
  to:
    kind: Service
    name: webapp-service
    weight: 100
  wildcardPolicy: None
